--- a/data/blog/agency-boundaries-khi-phai-phan-gioi-ro-rang-ai-chiu-trach-nhiem.mdx
+++ b/data/blog/agency-boundaries-khi-phai-phan-gioi-ro-rang-ai-chiu-trach-nhiem.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Agency Boundaries – Khi phải phân giới rõ ràng: ai chịu trách nhiệm?'
 date: '2025-10-27'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một công ty logistics triển khai hệ thống AI điều phối xe tải. Khi tai nạn xảy ra, tranh cãi nổ ra: '
 ---
