--- a/data/blog/ai-behavioral-contracts-khi-may-va-nguoi-ky-voi-nhau-luat-song-chung.mdx
+++ b/data/blog/ai-behavioral-contracts-khi-may-va-nguoi-ky-voi-nhau-luat-song-chung.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Behavioral Contracts – Khi máy và người ký với nhau “luật sống chung”'
 date: '2025-06-01'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Không còn đủ để AI “hứa” là an toàn. Con người muốn **cam kết ràng buộc**. Một hệ thống AI hỗ trợ bệ'
 ---
