--- a/data/blog/ai-empathy-layers-khi-may-biet-cham-vao-cam-xuc-ung-cho-va-ung-cach.mdx
+++ b/data/blog/ai-empathy-layers-khi-may-biet-cham-vao-cam-xuc-ung-cho-va-ung-cach.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Empathy Layers – Khi máy biết chạm vào cảm xúc đúng chỗ và đúng cách'
 date: '2025-07-29'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một người vừa thất nghiệp mở ứng dụng hỗ trợ tâm lý. AI không vội đưa lời khuyên hay giải pháp. Nó h'
 ---
