--- a/data/blog/ai-evaluation-khi-xa-hoi-oi-hoi-kiem-inh-nghiem-ngat-truoc-khi-phat-hanh.mdx
+++ b/data/blog/ai-evaluation-khi-xa-hoi-oi-hoi-kiem-inh-nghiem-ngat-truoc-khi-phat-hanh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Evaluation – Khi xã hội đòi hỏi kiểm định nghiêm ngặt trước khi phát hành'
 date: '2024-05-22'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một startup kể rằng sản phẩm của họ không được cấp phép vì thiếu bài đánh giá rủi ro mô hình. Đó là '
 ---
