--- a/data/blog/ai-identity-khi-tri-tue-nhan-tao-uoc-yeu-cau-the-hien-ban-chat-con-nguoi.mdx
+++ b/data/blog/ai-identity-khi-tri-tue-nhan-tao-uoc-yeu-cau-the-hien-ban-chat-con-nguoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Identity – Khi trí tuệ nhân tạo được yêu cầu thể hiện “bản chất con người”'
 date: '2024-12-01'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Người dùng bắt đầu đòi hỏi AI không chỉ trả lời đúng, mà phải có “hồn”: tính cách, cảm xúc, sự đồng '
 ---
