--- a/data/blog/ai-mentorship-loops-khi-co-may-tro-thanh-nguoi-thay-nhung-van-ky-vong-uoc-hoc-nguoc-lai.mdx
+++ b/data/blog/ai-mentorship-loops-khi-co-may-tro-thanh-nguoi-thay-nhung-van-ky-vong-uoc-hoc-nguoc-lai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Mentorship Loops – Khi cỗ máy trở thành người thầy nhưng vẫn kỳ vọng được học ngược lại'
 date: '2025-08-01'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một bạn trẻ học lập trình được AI hướng dẫn từng bước. Nhưng điều lạ là: AI cũng yêu cầu phản hồi từ'
 ---
