--- a/data/blog/ai-moderators-of-memory-khi-ai-huong-dan-ta-chon-ieu-gi-nen-nho-ieu-gi-nen-buong.mdx
+++ b/data/blog/ai-moderators-of-memory-khi-ai-huong-dan-ta-chon-ieu-gi-nen-nho-ieu-gi-nen-buong.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Moderators of Memory – Khi AI hướng dẫn ta chọn điều gì nên nhớ, điều gì nên buông'
 date: '2025-07-10'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một thanh niên mở ứng dụng lưu trữ ký ức. Hệ thống hỏi: “Bạn muốn ghi lại khoảnh khắc này để sau này'
 ---
