--- a/data/blog/ai-native-education-khi-tre-em-hoc-voi-thay-giao-tri-tue-nhan-tao-tu-ngay-au-i-hoc.mdx
+++ b/data/blog/ai-native-education-khi-tre-em-hoc-voi-thay-giao-tri-tue-nhan-tao-tu-ngay-au-i-hoc.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI-Native Education – Khi trẻ em học với thầy giáo trí tuệ nhân tạo từ ngày đầu đi học'
 date: '2025-02-11'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong một lớp học, mỗi học sinh nhìn vào một màn hình khác nhau. Mỗi bài tập đều được thiết kế riêng'
 ---
