--- a/data/blog/ai-reasoners-khi-mo-hinh-hoc-cach-suy-nghi-truoc-khi-noi.mdx
+++ b/data/blog/ai-reasoners-khi-mo-hinh-hoc-cach-suy-nghi-truoc-khi-noi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Reasoners – Khi mô hình học cách suy nghĩ trước khi nói'
 date: '2024-05-05'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Giữa 2024, một từ khóa thống trị cộng đồng AI: **Reasoner**. Không chỉ trả lời nhanh, mà phải **suy '
 ---
