--- a/data/blog/ai-social-autonomy-khi-may-biet-bao-ve-ranh-gioi-cua-chinh-minh.mdx
+++ b/data/blog/ai-social-autonomy-khi-may-biet-bao-ve-ranh-gioi-cua-chinh-minh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'AI Social Autonomy – Khi máy biết bảo vệ ranh giới của chính mình'
 date: '2025-08-15'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một người dùng yêu cầu trợ lý AI tiết lộ thông tin riêng tư của người khác. Ngày trước, mô hình có t'
 ---
