--- a/data/blog/autonomous-research-khi-ai-tro-thanh-nha-khoa-hoc-oc-lap.mdx
+++ b/data/blog/autonomous-research-khi-ai-tro-thanh-nha-khoa-hoc-oc-lap.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Autonomous Research – Khi AI trở thành nhà khoa học độc lập'
 date: '2024-10-23'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một mô hình được giao nhiệm vụ tìm chất liệu pin mới. Nó đọc hàng triệu bài nghiên cứu, đặt giả thuy'
 ---
