--- a/data/blog/civic-ai-khi-cong-dan-so-co-tieng-noi-trong-van-hanh-tri-tue-chung.mdx
+++ b/data/blog/civic-ai-khi-cong-dan-so-co-tieng-noi-trong-van-hanh-tri-tue-chung.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Civic AI – Khi công dân số có tiếng nói trong vận hành trí tuệ chung'
 date: '2025-10-12'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong một cuộc họp cộng đồng, người dân bỏ phiếu để hướng dẫn AI điều chỉnh cách ưu tiên dịch vụ côn'
 ---
