--- a/data/blog/cognitive-firewalls-khi-con-nguoi-hoc-cach-tu-ve-truoc-thuyet-phuc-cua-may-moc.mdx
+++ b/data/blog/cognitive-firewalls-khi-con-nguoi-hoc-cach-tu-ve-truoc-thuyet-phuc-cua-may-moc.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Cognitive Firewalls – Khi con người học cách tự vệ trước thuyết phục của máy móc'
 date: '2025-03-15'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một doanh nhân đang xem quảng cáo. Giọng đọc rất dễ mến, lời lẽ thấu hiểu, nội dung đánh trúng nỗi l'
 ---
