--- a/data/blog/collective-intelligence-network-khi-ai-giup-nhan-loai-suy-nghi-nhu-mot-bo-nao-chung.mdx
+++ b/data/blog/collective-intelligence-network-khi-ai-giup-nhan-loai-suy-nghi-nhu-mot-bo-nao-chung.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Collective Intelligence Network – Khi AI giúp nhân loại suy nghĩ như một bộ não chung'
 date: '2025-02-03'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Ở một bệnh viện, một bác sĩ đăng một trường hợp hiếm lên hệ thống AI. Trong vài giây, các mô hình ch'
 ---
