--- a/data/blog/collective-prompting-khi-con-nguoi-hop-tac-e-dan-dat-tri-tue-nhan-tao.mdx
+++ b/data/blog/collective-prompting-khi-con-nguoi-hop-tac-e-dan-dat-tri-tue-nhan-tao.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Collective Prompting – Khi con người hợp tác để dẫn dắt trí tuệ nhân tạo'
 date: '2025-07-01'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một nhóm bác sĩ cùng huấn luyện một AI hỗ trợ chẩn đoán. Không ai ra lệnh cho máy, mà mỗi người đưa '
 ---
