--- a/data/blog/cooperative-intuition-khi-du-cam-cua-nguoi-va-ly-tri-cua-may-bo-sung-nhau.mdx
+++ b/data/blog/cooperative-intuition-khi-du-cam-cua-nguoi-va-ly-tri-cua-may-bo-sung-nhau.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Cooperative Intuition – Khi dự cảm của người và lý trí của máy bổ sung nhau'
 date: '2025-08-21'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một bác sĩ trực đêm cảm thấy ca bệnh có gì đó “sai sai” dù tất cả chỉ số đều ổn. Anh yêu cầu AI phân'
 ---
