--- a/data/blog/embodied-digital-twins-khi-ban-sao-so-buoc-ra-the-gioi-vat-ly.mdx
+++ b/data/blog/embodied-digital-twins-khi-ban-sao-so-buoc-ra-the-gioi-vat-ly.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Embodied Digital Twins – Khi bản sao số bước ra thế giới vật lý'
 date: '2025-07-03'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một nhà sáng chế tạo ra bản sao số của mình để thử nghiệm ý tưởng. AI mô phỏng mọi quyết định, hậu q'
 ---
