--- a/data/blog/embodied-governance-khi-the-gioi-vat-ly-can-uoc-ieu-hanh-boi-tri-tue-so.mdx
+++ b/data/blog/embodied-governance-khi-the-gioi-vat-ly-can-uoc-ieu-hanh-boi-tri-tue-so.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Embodied Governance – Khi thế giới vật lý cần được điều hành bởi trí tuệ số'
 date: '2025-10-20'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Hãy hình dung một hệ thống giao thông: camera, đèn tín hiệu, trạm vận tải, xe tự hành — tất cả như n'
 ---
