--- a/data/blog/emotional-co-processors-khi-ai-tro-thanh-he-than-kinh-cam-xuc-cua-con-nguoi.mdx
+++ b/data/blog/emotional-co-processors-khi-ai-tro-thanh-he-than-kinh-cam-xuc-cua-con-nguoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Emotional Co-Processors – Khi AI trở thành hệ thần kinh cảm xúc của con người'
 date: '2025-01-22'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một cô sinh viên lần đầu trải qua khủng hoảng tâm lý nhẹ. Trước đây, cô sẽ cố tự chịu đựng hoặc tìm '
 ---
