--- a/data/blog/emotional-firewalls-khi-con-nguoi-can-hang-rao-tam-ly-chong-lai-suc-tac-ong-cua-ai.mdx
+++ b/data/blog/emotional-firewalls-khi-con-nguoi-can-hang-rao-tam-ly-chong-lai-suc-tac-ong-cua-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Emotional Firewalls – Khi con người cần hàng rào tâm lý chống lại sức tác động của AI'
 date: '2025-08-06'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một nhà sáng tạo nội dung bị AI gợi ý nội dung “viral” đến mức đánh mất chất riêng. Một người nghiện'
 ---
