--- a/data/blog/ethical-alignment-wars-khi-cac-nen-van-minh-au-tri-bang-tu-tuong-ai.mdx
+++ b/data/blog/ethical-alignment-wars-khi-cac-nen-van-minh-au-tri-bang-tu-tuong-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Ethical Alignment Wars – Khi các nền văn minh đấu trí bằng tư tưởng AI'
 date: '2025-03-01'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong một hội nghị khép kín, đại diện các quốc gia tranh luận kịch liệt: AI nên được dạy theo giá tr'
 ---
