--- a/data/blog/ethical-risk-limits-khi-tri-tue-nhan-tao-phai-biet-so-hau-qua.mdx
+++ b/data/blog/ethical-risk-limits-khi-tri-tue-nhan-tao-phai-biet-so-hau-qua.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Ethical Risk Limits – Khi trí tuệ nhân tạo phải biết sợ hậu quả'
 date: '2025-09-22'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một hệ thống AI lái xe tự hành dừng lại trước một tình huống không thể dự đoán. Nó không tiếp tục vì'
 ---
