--- a/data/blog/generative-cities-khi-thanh-pho-uoc-thiet-ke-lai-moi-ngay-theo-nhu-cau-cua-cu-dan.mdx
+++ b/data/blog/generative-cities-khi-thanh-pho-uoc-thiet-ke-lai-moi-ngay-theo-nhu-cau-cua-cu-dan.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Generative Cities – Khi thành phố được thiết kế lại mỗi ngày theo nhu cầu của cư dân'
 date: '2025-08-18'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Buổi sáng, một khu phố ưu tiên người đi bộ. Buổi chiều, nó mở lại đường cho xe cấp cứu và xe bus. Nh'
 ---
