--- a/data/blog/global-ai-governance-khi-the-gioi-ngoi-lai-e-viet-luat-cho-tri-tue.mdx
+++ b/data/blog/global-ai-governance-khi-the-gioi-ngoi-lai-e-viet-luat-cho-tri-tue.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Global AI Governance – Khi thế giới ngồi lại để viết luật cho trí tuệ'
 date: '2024-07-04'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Cuối thập kỷ 2010, AI chỉ là chuyện nội bộ trong ngành. Nhưng đến giữa 2024, **từng quốc gia** bắt đ'
 ---
