--- a/data/blog/human-ai-teaming-khi-con-nguoi-va-may-that-su-lam-viec-nhu-mot-oi.mdx
+++ b/data/blog/human-ai-teaming-khi-con-nguoi-va-may-that-su-lam-viec-nhu-mot-oi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Human-AI Teaming – Khi con người và máy thật sự làm việc như một đội'
 date: '2024-06-27'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một bác sĩ kể: “AI là người trợ lý đáng tin nhất mà tôi từng có. Nhưng quyết định cuối cùng vẫn là c'
 ---
