--- a/data/blog/invisible-workforce-khi-ai-lam-nhung-viec-khong-ai-cong-nhan-nhung-ca-the-gioi-phu-thuoc.mdx
+++ b/data/blog/invisible-workforce-khi-ai-lam-nhung-viec-khong-ai-cong-nhan-nhung-ca-the-gioi-phu-thuoc.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Invisible Workforce – Khi AI làm những việc không ai công nhận nhưng cả thế giới phụ thuộc'
 date: '2025-07-23'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong một công ty logistics, hàng nghìn đơn hàng được phân tuyến mượt mà mỗi ngày. Ít ai biết đằng s'
 ---
