--- a/data/blog/multimodal-agents-khi-ai-co-the-cam-nhan-suy-nghi-va-hanh-ong-lien-mach.mdx
+++ b/data/blog/multimodal-agents-khi-ai-co-the-cam-nhan-suy-nghi-va-hanh-ong-lien-mach.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Multimodal Agents – Khi AI có thể cảm nhận, suy nghĩ và hành động liền mạch'
 date: '2024-10-02'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một kỹ thuật viên đưa cho agent một file PDF dài trăm trang, một đoạn video quy trình sản xuất và ản'
 ---
