--- a/data/blog/neural-memories-khi-ky-uc-so-co-gia-tri-nhu-ky-uc-that.mdx
+++ b/data/blog/neural-memories-khi-ky-uc-so-co-gia-tri-nhu-ky-uc-that.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Neural Memories – Khi ký ức số có giá trị như ký ức thật'
 date: '2025-06-18'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một người truy cập lại bản ghi hội thoại 3 năm trước với AI và cảm thấy xúc động: “Ồ, thì ra mình đã'
 ---
