--- a/data/blog/on-device-intelligence-khi-ai-song-ngay-trong-tui-ao-ban.mdx
+++ b/data/blog/on-device-intelligence-khi-ai-song-ngay-trong-tui-ao-ban.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'On-Device Intelligence – Khi AI sống ngay trong túi áo bạn'
 date: '2024-08-18'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một người dùng mở camera lên. Một chú chó bước qua khung hình, AI nhận ra giống chó và cảnh báo nhiệ'
 ---
