--- a/data/blog/personal-agi-khi-tri-tue-nhan-tao-tro-thanh-ban-nga-thu-hai-cua-moi-nguoi.mdx
+++ b/data/blog/personal-agi-khi-tri-tue-nhan-tao-tro-thanh-ban-nga-thu-hai-cua-moi-nguoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Personal AGI – Khi trí tuệ nhân tạo trở thành bản ngã thứ hai của mỗi người'
 date: '2025-01-12'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Buổi sáng đầu năm, một người dùng mở mắt ra và câu đầu tiên AI nói với anh không phải “Chúc một ngày'
 ---
