--- a/data/blog/personal-ai-khi-moi-nguoi-co-mot-phien-ban-phu-e-song-giup-minh.mdx
+++ b/data/blog/personal-ai-khi-moi-nguoi-co-mot-phien-ban-phu-e-song-giup-minh.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Personal AI – Khi mỗi người có một “phiên bản phụ” để sống giúp mình'
 date: '2024-09-06'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một doanh nhân bật ứng dụng lên và thấy trợ lý của mình đã đặt lịch họp, trả lời email quan trọng và'
 ---
