--- a/data/blog/reality-integrity-systems-khi-su-that-can-uoc-chung-thuc-boi-ai.mdx
+++ b/data/blog/reality-integrity-systems-khi-su-that-can-uoc-chung-thuc-boi-ai.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Reality Integrity Systems – Khi sự thật cần được “chứng thực” bởi AI'
 date: '2025-07-20'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một phóng viên gửi video hiện trường lên hệ thống kiểm chứng — AI quét từng pixel, phân tích nguồn á'
 ---
