--- a/data/blog/sensemaking-engines-khi-ai-giup-con-nguoi-hieu-uoc-the-gioi-phuc-tap.mdx
+++ b/data/blog/sensemaking-engines-khi-ai-giup-con-nguoi-hieu-uoc-the-gioi-phuc-tap.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Sensemaking Engines – Khi AI giúp con người hiểu được thế giới phức tạp'
 date: '2025-10-20'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Thông tin tràn ngập hơn bất kỳ thời điểm nào trong lịch sử. Nhưng lượng dữ liệu khổng lồ không giúp '
 ---
