--- a/data/blog/shadow-policies-khi-luat-ieu-hanh-ai-nam-ngoai-tam-mat-con-nguoi.mdx
+++ b/data/blog/shadow-policies-khi-luat-ieu-hanh-ai-nam-ngoai-tam-mat-con-nguoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Shadow Policies – Khi luật điều hành AI nằm ngoài tầm mắt con người'
 date: '2025-08-05'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một nhân viên phát hiện rằng AI gợi ý ưu tiên khách hàng có khả năng chi tiêu cao hơn, dù chính sách'
 ---
