--- a/data/blog/silent-corrections-khi-ai-am-tham-sua-loi-cho-nguoi-ma-khong-len-mat-day-oi.mdx
+++ b/data/blog/silent-corrections-khi-ai-am-tham-sua-loi-cho-nguoi-ma-khong-len-mat-day-oi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Silent Corrections – Khi AI âm thầm sửa lỗi cho người mà không lên mặt dạy đời'
 date: '2025-07-14'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một đứa bé hỏi AI cách viết chính tả một từ khó. AI đưa ra câu trả lời đúng nhưng không làm nó xấu h'
 ---
