--- a/data/blog/synthetic-agents-khi-ai-co-danh-tinh-rieng-va-hanh-vi-rieng.mdx
+++ b/data/blog/synthetic-agents-khi-ai-co-danh-tinh-rieng-va-hanh-vi-rieng.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Synthetic Agents – Khi AI có danh tính riêng và hành vi riêng'
 date: '2024-06-10'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Ở các nền tảng ảo, người ta bắt đầu gặp những nhân vật rất kỳ lạ: họ không phải người thật, nhưng cũ'
 ---
