--- a/data/blog/synthetic-personalities-khi-ai-khong-chi-co-tinh-cach-ma-co-nhan-sinh-quan.mdx
+++ b/data/blog/synthetic-personalities-khi-ai-khong-chi-co-tinh-cach-ma-co-nhan-sinh-quan.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Synthetic Personalities – Khi AI không chỉ có tính cách, mà có… nhân sinh quan'
 date: '2025-08-02'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Người dùng chọn: “Một cố vấn nghiêm nghị nhưng trân trọng nỗ lực.” Và thế là một nhân cách AI được s'
 ---
