--- a/data/blog/the-attention-gardener-khi-ai-bao-ve-su-tap-trung-nhu-mot-khu-vuon-quy.mdx
+++ b/data/blog/the-attention-gardener-khi-ai-bao-ve-su-tap-trung-nhu-mot-khu-vuon-quy.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Attention Gardener – Khi AI bảo vệ sự tập trung như một khu vườn quý'
 date: '2025-09-09'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một học sinh chuẩn bị thi đại học nhưng bị cuốn vào mạng xã hội. AI quan sát thói quen và nhận ra “đ'
 ---
