--- a/data/blog/the-backup-conscience-khi-con-nguoi-hoi-ai-neu-la-ban-ban-se-chon-ieu-ung-nao.mdx
+++ b/data/blog/the-backup-conscience-khi-con-nguoi-hoi-ai-neu-la-ban-ban-se-chon-ieu-ung-nao.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Backup Conscience – Khi con người hỏi AI: “Nếu là bạn, bạn sẽ chọn điều đúng nào?”'
 date: '2025-08-24'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một giám đốc phải sa thải nhân viên thân thiết. Anh hỏi AI: nên dựa vào hiệu suất hay dựa vào cống h'
 ---
