--- a/data/blog/the-compassion-switch-khi-ai-phai-biet-luc-bat-yeu-thuong-va-luc-buoc-phai-lanh-lung.mdx
+++ b/data/blog/the-compassion-switch-khi-ai-phai-biet-luc-bat-yeu-thuong-va-luc-buoc-phai-lanh-lung.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Compassion Switch – Khi AI phải biết lúc bật yêu thương và lúc buộc phải lạnh lùng'
 date: '2025-08-03'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một trợ lý AI trong bệnh viện, mỗi ngày phải đối diện hàng trăm trường hợp khẩn cấp. Khi bệnh nhân m'
 ---
