--- a/data/blog/the-human-override-paradox-khi-ai-gioi-en-muc-con-nguoi-khong-dam-bam-nut-can-thiep.mdx
+++ b/data/blog/the-human-override-paradox-khi-ai-gioi-en-muc-con-nguoi-khong-dam-bam-nut-can-thiep.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Human-Override Paradox – Khi AI giỏi đến mức… con người không dám bấm nút “can thiệp”'
 date: '2025-09-01'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một kỹ sư giám sát hệ thống tự động hóa nhà máy. Có lần AI dự đoán một tai nạn sắp xảy ra và dừng to'
 ---
