--- a/data/blog/transparent-agency-khi-ai-phai-cho-con-nguoi-thay-vi-sao-no-chon-ieu-o.mdx
+++ b/data/blog/transparent-agency-khi-ai-phai-cho-con-nguoi-thay-vi-sao-no-chon-ieu-o.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Transparent Agency – Khi AI phải cho con người thấy vì sao nó chọn điều đó'
 date: '2025-09-02'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một bệnh nhân hỏi hệ thống AI: “Tại sao anh khuyên tôi chọn phác đồ này?” Thay vì nói “vì tôi nghĩ v'
 ---
