--- a/data/blog/zero-trust-ai-khi-niem-tin-phai-uoc-kiem-chung-tung-giay.mdx
+++ b/data/blog/zero-trust-ai-khi-niem-tin-phai-uoc-kiem-chung-tung-giay.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Zero-Trust AI – Khi niềm tin phải được kiểm chứng từng giây'
 date: '2025-08-29'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong môi trường tài chính, AI thực hiện hàng nghìn giao dịch mỗi phút. Một lỗi nhỏ có thể thổi bay '
 ---
