--- a/data/blog/all-weather-ai-khi-tri-tue-nhan-tao-khong-gay-khi-the-gioi-hon-loan.mdx
+++ b/data/blog/all-weather-ai-khi-tri-tue-nhan-tao-khong-gay-khi-the-gioi-hon-loan.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'All-Weather AI – Khi trí tuệ nhân tạo không gãy khi thế giới hỗn loạn'
 date: '2025-09-27'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Những cơn bão thông tin ập đến: tin giả, tấn công thao túng, các sự kiện cực đoan ngoài dự liệu. Trư'
 ---
