--- a/data/blog/fragile-autonomy-khi-ai-co-tu-do-nhung-tu-do-ay-co-the-tan-vo-chi-vi-mot-loi-nho.mdx
+++ b/data/blog/fragile-autonomy-khi-ai-co-tu-do-nhung-tu-do-ay-co-the-tan-vo-chi-vi-mot-loi-nho.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Fragile Autonomy – Khi AI có tự do, nhưng tự do ấy có thể tan vỡ chỉ vì một lỗi nhỏ'
 date: '2025-08-15'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một robot cứu hộ đang dẫn đội lính cứu hỏa vào khu vực nguy hiểm. Nó tự chọn đường đi tối ưu, tự trá'
 ---
