--- a/data/blog/human-authenticity-khi-con-nguoi-phai-chung-minh-minh-la-nguoi-that.mdx
+++ b/data/blog/human-authenticity-khi-con-nguoi-phai-chung-minh-minh-la-nguoi-that.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Human Authenticity – Khi con người phải chứng minh mình là… người thật'
 date: '2025-09-12'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Ở cổng một dịch vụ mạng xã hội, người dùng phải trả lời vài câu hỏi kỳ lạ: “Bạn từng sợ điều gì nhưn'
 ---
