--- a/data/blog/proof-of-humanity-protocols-khi-su-ton-tai-can-uoc-xac-thuc-lien-tuc.mdx
+++ b/data/blog/proof-of-humanity-protocols-khi-su-ton-tai-can-uoc-xac-thuc-lien-tuc.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'Proof-of-Humanity Protocols – Khi sự tồn tại cần được xác thực liên tục'
 date: '2025-10-05'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Trong một gian hàng sự kiện, người ta quét gương mặt và nói vài câu thoại cá nhân, AI xác nhận: “Bạn'
 ---
