--- a/data/blog/the-invisible-negotiator-khi-ai-am-tham-giam-bot-xung-ot-trong-xa-hoi.mdx
+++ b/data/blog/the-invisible-negotiator-khi-ai-am-tham-giam-bot-xung-ot-trong-xa-hoi.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Invisible Negotiator – Khi AI âm thầm giảm bớt xung đột trong xã hội'
 date: '2025-08-12'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một thành phố triển khai hệ thống AI trong quản lý khiếu nại cư dân. Ban đầu, mọi người nghĩ nó chỉ '
 ---
