--- a/data/blog/the-trust-dial-khi-niem-tin-giua-nguoi-va-ai-khong-phai-battat-ma-la-mot-chiec-num-xoay-tinh-te.mdx
+++ b/data/blog/the-trust-dial-khi-niem-tin-giua-nguoi-va-ai-khong-phai-battat-ma-la-mot-chiec-num-xoay-tinh-te.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Trust Dial – Khi niềm tin giữa người và AI không phải bật/tắt mà là một chiếc núm xoay tinh tế'
 date: '2025-07-20'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một kiến trúc sư dùng AI để mô phỏng kết cấu tòa nhà. Anh hiểu rằng nếu tin quá, sai số nhỏ sẽ thành'
 ---
