--- a/data/blog/the-gentle-audit-khi-ai-kiem-toan-long-tu-te-cua-to-chuc.mdx
+++ b/data/blog/the-gentle-audit-khi-ai-kiem-toan-long-tu-te-cua-to-chuc.mdx
@@ -1,7 +1,7 @@
 ---
 title: 'The Gentle Audit – Khi AI kiểm toán lòng tử tế của tổ chức'
 date: '2025-09-26'
-tags: ['AI', 'NLP', '2018']
+tags: ['AI', 'CÔNG-NGHỆ']
 draft: false
 summary: 'Một công ty công nghệ tự hào vì đã tạo tác động xã hội. AI tiến hành “kiểm toán tử tế”: từ cách chào'
 ---
